Fix select field word break and overflow behavior

--- a/client/src/style/scss/multiselect.scss
+++ b/client/src/style/scss/multiselect.scss
@@ -21,6 +21,8 @@
     }
     .multiselect__tag {
         min-height: 0;
+        white-space: normal;
+        word-break: break-all;
     }
     .multiselect__tags {
         background: transparent;
@@ -31,8 +33,8 @@
             color: $text-color;
             font-size: $font-size-base;
             overflow: hidden;
-            text-overflow: ellipsis;
-            white-space: nowrap;
+            white-space: normal;
+            word-break: break-all;
         }
     }
 }
